--- a/dji-360-viewer.html
+++ b/dji-360-viewer.html
@@ -147,7 +147,7 @@
         // Khởi tạo viewer với ảnh từ Uploadcare
         viewer = pannellum.viewer('panorama', {
             type: 'equirectangular',
-            panorama: 'https://2lhxnpm3fc.ucarecdn.com/337ab782-96a0-4f34-9375-b5e62a9847b3/DJI_20251022104630_0008_D.JPG',
+            panorama: './DJI_20251022104630_0008_D.JPG',
             autoLoad: true,
             showControls: false,
             showFullscreenCtrl: false,
