--- a/dji-360-viewer.html
+++ b/dji-360-viewer.html
@@ -147,7 +147,7 @@
         // Khởi tạo viewer với ảnh từ Uploadcare
         viewer = pannellum.viewer('panorama', {
             type: 'equirectangular',
-            panorama: './DJI_20251022104630_0008_D.JPG',
+            panorama: 'https://github.com/Ong-De-Tam-Nha/Tam-Nha-Farm/blob/main/DJI_20251022104630_0008_D.JPG',
             autoLoad: true,
             showControls: false,
             showFullscreenCtrl: false,
